created a functioning keypress action

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>Grow Your Tree</title>
 </head>
 	<body>
-		<label for="char">Type your character</label>
-		<input id="char" type="text" name="char">
+		<label for="char">Type your character</label><br>
+		<input id="char" type="text" name="char" onkeydown="enterKey(event)"><br>
 		
-		<label for="height">How tall?</label>
-		<input id="height" type="text" name="height">
+		<label for="height">How tall?</label><br>
+		<input id="height" type="text" name="height" onkeydown="enterKey(event)"><br>
 		
 		<button id="growTree">Grow Your Tree!</button>
 		<script type="text/javascript" src="main.js"></script>
